--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      *,*::after,*::before{
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+      }
+
+      html{
+        font-size: 62.5%;
+      }
+
+      body{
+        font-size: 1.6rem;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
